--- a/page/_layout/nav.html
+++ b/page/_layout/nav.html
@@ -16,10 +16,9 @@
     <div class="collapse navbar-collapse" id="navbarResponsive">
       <ul class="navbar-nav ml-auto">
         {{for (s, n) in sections}}
-        <li class="nav-item">
-          <a class="nav-link" href="#{{fill s}}">{{fill n}}</a>
-        </li>
+        <li class="nav-item"><a class="nav-link" href="#{{fill s}}">{{fill n}}</a></li>
         {{end}}
+        <li class="nav-item"><a class="nav-link" href="/blog">Blog</a></li>
       </ul>
     </div>
   </div>
