--- a/page/_layout/page_foot.html
+++ b/page/_layout/page_foot.html
@@ -1,5 +1,9 @@
 <footer class="py-5 bg-dark">
   <div class="container">
-    <p class="m-0 text-center text-white">&copy; {{authors}}. Website powered by <a href="https://github.com/tlienart/Franklin.jl">Franklin.jl</a>, <a href="https://github.com/tlienart/PkgPage.jl">PkgPage.jl</a> and the <a href="https://julialang.org">Julia</a> programming language.</p>
+    <p class="m-0 text-center text-white">&copy; {{authors}}.
+      This site is powered by <a href="https://www.netlify.com">Netlify</a>,
+      <a href="https://github.com/tlienart/Franklin.jl">Franklin.jl</a>,
+      <a href="https://github.com/tlienart/PkgPage.jl">PkgPage.jl</a> and the
+      <a href="https://julialang.org">Julia</a> programming language.</p>
   </div>
 </footer>
