Added matomo analytics tracker

--- a/page/_layout/head.html
+++ b/page/_layout/head.html
@@ -16,6 +16,7 @@
   <style>{{insert style_tuning.fcss}}</style>
   <link rel="stylesheet" href="/css/custom.css">
 
+  <script src="/libs/analytics/matomo.js"></script>
   <script async defer src="https://buttons.github.io/buttons.js"></script>
 </head>
 <body id="page-top">
